name:                yesod-static-commons
version:             0.1.0.0
synopsis:            Common stylesheets and javascript libraries
description:         Please see README.md
homepage:            http://github.com/andrewthad/yesod-static-commons#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Martin
maintainer:          andrew.thaddeus@gmail.com
copyright:           2016 Andrew Martin
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     
     Yesod.Static.Bootstrap
   , Yesod.Static.Jquery
   , Yesod.Static.PickAColor
   , Yesod.Static.TinyColor
   , Yesod.Static.Commons.Internal
   , Yesod.Static.Commons
   , Yesod.Form.Fields.Bootstrap
   , Yesod.Form.Fields.Bootstrap.Types
  build-depends:
     base >= 4.7 && < 5
   , yesod-core
   , yesod-static
   , yesod-form
   , text
   , shakespeare
  default-extensions:
    TemplateHaskell
    QuasiQuotes
    DefaultSignatures
    DataKinds
    TypeOperators
    MultiParamTypeClasses
    PolyKinds
    ConstraintKinds
    TypeFamilies
    FlexibleContexts

source-repository head
  type:     git
  location: https://github.com/andrewthad/yesod-static-commons
